# telekinesis

./: CMakeLists.txt  CMakeLists.txt Vec  CMakelists.txt  CmakeLists.txt   Makefile  Stack.cpp  Stack.h  main.cpp
 vector/: CMakeLists.txt
 vector /: CMakeLists.txt
 vector /VectorHeader/: Vector.cpp  Vector.h  Vector.hpp
 vector /VectorSrc/: Vector.cpp  Vector.hpp  main.cpp
 vector/VectorHeader/: Vector.cpp  Vector.hpp
 vector/VectorSrc/: main.cpp
Forward_List/: CMakeLists.txt
Forward_List/ForwardHeader/: ForwardList.cpp  ForwardList.h
Forward_List/ForwardSrc/: main.cpp
SpreadSheet/: CMakeLists.txt  Cell.cpp  Cell.h  SpreadSheet.h
SpreadSheet/Headers/: Cell.h  SpreadSheet.h
SpreadSheet/Src/: Cell.cpp  SpreadSheet.cpp  main.cpp
StackHeader/: Stack.cpp
StackSrc/: main.cpp
Task1/: LettTask1.cpp
Virtual Table Musican/: CMakeLists.txt
Virtual Table Musican/Headers/: VT.h
Virtual Table Musican/Src/: main.cpp
headers/: ForwardList.h
headers1/: Vector.hpp
headers2/: Task1.hpp
operators/: CMakelists.txt  Task1.hpp  main.cpp
queue/: CMakeLists.txt
queue/QueueHeader/: Queue.h  Queue.hpp
queue/QueueSrc/: Queue.hpp  a.out  main.cpp
src/: ForwardList.cpp  main.cpp
src1/: Vector.cpp
stack/: CMakeLists.txt
stack/StackHeader/: Stack.cpp  Stack.h
stack/StackSrc/: Stack.hpp  a.out  main.cpp
vector/: Vector.cpp
